syntax = "proto3";

option java_multiple_files = true;
option java_package = "proto.sharedMutex";
option java_outer_classname = "SharedMutexProto";

import "common.proto";
import "google/protobuf/empty.proto";

service SharedMutex {
  rpc registerRequest(Request) returns (google.protobuf.Empty) {}
  rpc registerReply(Reply) returns (google.protobuf.Empty) {}
  rpc updateSharedVariable(SharedVariableUpdate) returns (google.protobuf.Empty) {}
}

message Request {
 Address address = 1;
}

message Reply {
  Address address = 1;
}

message SharedVariableUpdate {
  int32 newValue = 1;
}